# Essentia-Studio

./: .dockerignore  .gitattributes  .gitignore  .windsurfrules  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.cuda-onnx  GEMINI.md  README.md  THIRD_PARTY_NOTICES.md  compose.cuda.dev.yml  compose.cuda.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  release-please-config.json
.cursor/rules/: project.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dev-images.yml  gpu-smoke.yml  release.yml
backend/essentia_studio/: __init__.py  config.py  errors.py  main.py
docker/: __init__.py  entrypoint.py
docs/: architecture.md  development.md  licenses.md  upstream-sync.md
docs/deployment/: apple-container.md  linux-docker.md  windows.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: analysis-workbench.spec.ts  playlists.spec.ts  settings-percentages.spec.ts  tag-suggestions.spec.ts  theme-and-filters.spec.ts
frontend/src/: main.tsx
requirements/: analysis.in  runtime.in
scripts/: __init__.py  cpu_smoke.py  dev.py  download_models.py  e2e_server.py  gpu_smoke.py  import_nsp_catalog.py  validate_model_manifest.py  verify.py  worker_recovery_smoke.py
scripts/ci/: assert_capabilities.py  benchmark_api_smoke.py  container_api_smoke.py  generate_fixture.py
tests/: conftest.py  test_config.py
tests/analysis/: test_cuda_pipeline.py  test_essentia_backend.py  (+6 more)
(+244 files in other folders)
